--- a/maps_and_graphics.ipynb
+++ b/maps_and_graphics.ipynb
@@ -595,7 +595,7 @@
     "sns.set_style(\"whitegrid\")\n",
     "sns.barplot(data=plot_df, y='Регион', x='Средняя прибыль', hue='Регион', palette=sns.light_palette(\"navy\", n_colors=15, reverse=True), orient='h')\n",
     "\n",
-    "plt.title('Топ-5 регионов по средней выручке', fontsize=16, x=0.4)\n",
+    "plt.title('Топ-5 регионов по средней прибыли', fontsize=16, x=0.4)\n",
     "plt.xlabel('Средняя прибыль, млн руб.',fontsize=14)\n",
     "plt.ylabel('Регион',fontsize=14)\n",
     "\n",
